--- a/index.html
+++ b/index.html
@@ -4,16 +4,81 @@
 <title>Viable Supply</title>
 <meta charset="UTF-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* { box-sizing: border-box; }
+h1, h2 {
+	text-align: center;
+}
+header {
+	position: sticky;
+	width: calc(100% + 4px);
+	height: 100%;
+	left: 0;
+	top: -12em;
+	background: rgba(255,255,255,.5);
+	backdrop-filter: blur(10px);
+	overflow: hidden;
+}
+header * {
+	padding: 2em 10em;
+}
+body {
+	background: linear-gradient(140deg, #000 0%, #960 50%, #C99 75%) fixed;
+	font-family: sans-serif;
+	color: #000;
+	padding: 0;
+	margin: 0;
+	overflow-x: hidden;
+}
+main {
+	margin: 1em;
+}
+section {
+	padding: 2em 10em;
+	background: rgba(200,200,255,.5);
+}
+
+</style>
 </head>
 <body>
 
 <header>
 	<h1>Viable Supply</h1>
+	<h2>Bridging the funding gap between corporations and hobbyists.</h2>
 </header>
 
 <main>
 
-Bridging the funding gap between corporations and hobbyists.
+<section>
+<h3>For businesses.</h3>
+<p>Gain extra recognition for supporting hobbyists and niche creators whose work you profit from.</p>
+</section>
+
+<section>
+<h3>For hobbyists.</h3>
+<p>Hobbyists face the long-standing funding problem. Viable Supply certification aims to address that.</p>
+</section>
+
+<section>
+<h3>For customers.</h3>
+<p>By choosing businesses certified as Viable Supply you support the fellow hobbyists without having to pay them.</p>
+</section>
+
+<section>
+<h3>For auditors and journalists.</h3>
+<p>By promoting our mission you make the world a better place for underfunded niche creators.</p>
+</section>
+
+<section>
+<h3>Where copyright does not help.</h3>
+<p>Underfunded individuals have no resources to enforce their intellectual property rights against corporations.
+They also have no resources to stand up to misenforcement.</p>
+</section>
+
+<section>
+<h3>Join our mission now.</h3>
+<p>Contact us to get more insight about our certification program.</p>
+</section>
 
 </main>
 
