More content better style

--- a/index.html
+++ b/index.html
@@ -4,41 +4,7 @@
 <title>Viable Supply</title>
 <meta charset="UTF-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-* { box-sizing: border-box; }
-h1, h2 {
-	text-align: center;
-}
-header {
-	position: sticky;
-	width: calc(100% + 4px);
-	height: 100%;
-	left: 0;
-	top: -12em;
-	background: rgba(255,255,255,.5);
-	backdrop-filter: blur(10px);
-	overflow: hidden;
-}
-header * {
-	padding: 2em 10em;
-}
-body {
-	background: linear-gradient(140deg, #000 0%, #960 50%, #C99 75%) fixed;
-	font-family: sans-serif;
-	color: #000;
-	padding: 0;
-	margin: 0;
-	overflow-x: hidden;
-}
-main {
-	margin: 1em;
-}
-section {
-	padding: 2em 10em;
-	background: rgba(200,200,255,.5);
-}
-
-</style>
+<link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
@@ -50,37 +16,61 @@ section {
 <main>
 
 <section>
-<h3>For businesses.</h3>
-<p>Gain extra recognition for supporting hobbyists and niche creators whose work you profit from.</p>
-</section>
+<article>
+	<h3>Reward honest work.</h3>
+	<p>Care about those who actually put their effort in.</p>
+</article>
 
-<section>
-<h3>For hobbyists.</h3>
-<p>Hobbyists face the long-standing funding problem. Viable Supply certification aims to address that.</p>
-</section>
+<article>
+	<h3>For businesses.</h3>
+	<p>Gain extra recognition and long-term stability by caring for your supply chain.</p>
+</article>
 
-<section>
-<h3>For customers.</h3>
-<p>By choosing businesses certified as Viable Supply you support the fellow hobbyists without having to pay them.</p>
-</section>
+<article>
+	<h3>For hobbyists.</h3>
+	<p>Hobbyists face the long-standing funding problem. Viable Supply certification aims to address that.</p>
+</article>
 
-<section>
-<h3>For auditors and journalists.</h3>
-<p>By promoting our mission you make the world a better place for underfunded niche creators.</p>
-</section>
+<article>
+	<h3>For customers.</h3>
+	<p>By choosing businesses certified as Viable Supply you support the fellow hobbyists without the extra hassle of paying them directly.</p>
+</article>
 
-<section>
-<h3>Where copyright does not help.</h3>
-<p>Underfunded individuals have no resources to enforce their intellectual property rights against corporations.
-They also have no resources to stand up to misenforcement.</p>
-</section>
+<article>
+	<h3>For auditors and journalists.</h3>
+	<p>Spread the word! By promoting our mission you make the world a better place for underfunded niche creators.</p>
+</article>
 
-<section>
-<h3>Join our mission now.</h3>
-<p>Contact us to get more insight about our certification program.</p>
+<article>
+	<h3>Not reinventing the wheel.</h3>
+	<p>There are <a href="comparison/">excellent projects</a> helping the cause already.
+	We do not aim to replace those tools, but to bring them to light.</p>
+</article>
+
+<article>
+	<h3>IP rights do not help.</h3>
+	<p>Underfunded individuals have no resources to enforce their intellectual property rights against corporations.
+	They also have no resources to stand up to misenforcement.</p>
+</article>
+
+<article>
+	<h3>Join our mission now.</h3>
+	<p>Contact us to get more insight about our certification program.</p>
+</article>
 </section>
 
 </main>
+
+<footer>
+<section>
+<p><a href="https://viable.supply">Viable Supply</a> — supply chain viability certification initiative</p>
+<p>© 2023 Viable Supply team.</p>
+
+<address>
+Contact us at <a href="mailto:contact@viable.supply">contact@viable.supply</a>.
+</address>
+</section>
+</footer>
 
 </body>
 </html>
